GloablServices/keshavglobal/force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <label>Case History</label>
    <nameField>
        <displayFormat>CH-{0}</displayFormat>
        <label>Case History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case&apos;s History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>