GloablServices/keshavglobal/force-app/main/default/objects/Case_History__c/fields/Intake_Request__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request__c</fullName>
    <label>Intake Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case&apos;s History</relationshipLabel>
    <relationshipName>Case_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>