GloablServices/keshavglobal/force-app/main/default/objects/Case_History__c/fields/Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Note__c</fullName>
    <label>Internal Note</label>
    <type>TextArea</type>
</CustomField>