GloablServices/keshavglobal/force-app/main/default/objects/Case_History__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>75</length>
    <type>Text</type>
</CustomField>