GloablServices/keshavglobal/force-app/main/default/objects/Case_History__c/fields/Sub_Process__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process__c</fullName>
    <label>Sub Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>